--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="product__image">
                   <img
                     src="src/img/main-chair-desktop.jpg"
-                    srcset="img/main-chair-desktop@2x.jpg 2x"
+                    srcset="src/img/main-chair-desktop@2x.jpg 2x"
                     width="532"
                     height="751"
                     alt="Кресло Антиква"
@@ -73,7 +73,7 @@
                 <div class="product__image">
                   <img
                     src="src/img/main-chair-desktop.jpg"
-                    srcset="img/main-chair-desktop@2x.jpg 2x"
+                    srcset="src/img/main-chair-desktop@2x.jpg 2x"
                     width="532"
                     height="751"
                     alt="Кресло Антиква"
@@ -92,7 +92,7 @@
                 <div class="product__image">
                   <img
                     src="src/img/main-chair-desktop.jpg"
-                    srcset="img/main-chair-desktop@2x.jpg 2x"
+                    srcset="src/img/main-chair-desktop@2x.jpg 2x"
                     width="532"
                     height="751"
                     alt="Кресло Антиква"
@@ -111,7 +111,7 @@
                 <div class="product__image">
                   <img
                     src="src/img/main-chair-desktop.jpg"
-                    srcset="img/main-chair-desktop@2x.jpg 2x"
+                    srcset="src/img/main-chair-desktop@2x.jpg 2x"
                     width="532"
                     height="751"
                     alt="Кресло Антиква"
@@ -132,21 +132,21 @@
               <div class="news-blocks">
                 <h2 class="news-title">НОВИНКИ</h2>
                 <a href="#" class="news-item pt-20 pt-10">
-                  <img src="/src/img/chair-twilight-desktop.jpg" alt="chair" class="news-item__image" />
+                  <img src="/src/img/chair-twilight-desktop.jpg" alt="chair" class="news-item__image" srcset="/src/img/chair-twilight-desktop@2x.jpg 2x" />
                   <div class="item-text">
                     <h3 class="news-item__title">Стул «Смеркается»</h3>
                     <span class="news-item__price">$280</span>
                   </div>
                 </a>
                 <a href="#" class="news-item">
-                  <img src="/src/img/chandelier-desktop.jpg" alt="chandelier" class="news-item__image" />
+                  <img src="/src/img/chandelier-desktop.jpg" alt="chandelier" class="news-item__image" srcset="/src/img/chandelier-desktop@2x.jpg 2x"/>
                   <div class="item-text">
                     <h3 class="news-item__title">Люстра «Облако»</h3>
                     <span class="news-item__price">$250</span>
                   </div>
                 </a>
                 <a href="#" class="news-item brule">
-                  <img src="/src/img/table-cream-desktop.png" alt="table" class="news-item__image" />
+                  <img src="/src/img/table-cream-desktop.png" alt="table" class="news-item__image" srcset="/src/img/table-cream-desktop@2x.png 2x"/>
                   <div class="item-text">
                     <h3 class="news-item__title">Стол «Крем брюле»</h3>
                     <span class="news-item__price">$320</span>
@@ -155,7 +155,7 @@
               </div>
               <div class="news-blocks-right">
                 <a href="#" class="news-item big pt-20">
-                  <img src="./src/img/chair-white-desktop.jpg" alt="White chair" class="news-item__image" />
+                  <img src="./src/img/chair-white-desktop.jpg" alt="White chair" class="news-item__image" srcset="./src/img/chair-white-desktop@2x.jpg 2x"/>
                   <div class="item-text">
                     <h3 class="news-item__title">Стул офисный «Белый шоколад»</h3>
                     <span class="news-item__price">$120</span>
@@ -173,7 +173,7 @@
             <div class="swiper-wrapper">
               <div class="item swiper-slide">
                 <div class="item-user">
-                  <img src="./src/img/avatar.jpg" alt="Avatar image" class="user-image" />
+                  <img src="./src/img/avatar.jpg" alt="Avatar image" class="user-image" srcset="./src/img/avatar@2x.jpg 2x"/>
                   <h3 class="user-name">Елена Новикова</h3>
                   <h4 class="user-employment">студентка</h4>
                   <p class="user-comment">
@@ -184,7 +184,7 @@
               </div>
               <div class="item swiper-slide">
                 <div class="item-user">
-                  <img src="./src/img/avatar.jpg" alt="Avatar image" class="user-image" />
+                  <img src="./src/img/avatar.jpg" alt="Avatar image" class="user-image" srcset="./src/img/avatar@2x.jpg 2x"/>
                   <h3 class="user-name">Елена Новикова</h3>
                   <h4 class="user-employment">студентка</h4>
                   <p class="user-comment">
@@ -195,7 +195,7 @@
               </div>
               <div class="item swiper-slide">
                 <div class="item-user">
-                  <img src="./src/img/avatar.jpg" alt="Avatar image" class="user-image" />
+                  <img src="./src/img/avatar.jpg" alt="Avatar image" class="user-image" srcset="./src/img/avatar@2x.jpg 2x"/>
                   <h3 class="user-name">Елена Новикова</h3>
                   <h4 class="user-employment">студентка</h4>
                   <p class="user-comment">
@@ -206,7 +206,7 @@
               </div>
               <div class="item swiper-slide">
                 <div class="item-user">
-                  <img src="./src/img/avatar.jpg" alt="Avatar image" class="user-image" />
+                  <img src="./src/img/avatar.jpg" alt="Avatar image" class="user-image" srcset="./src/img/avatar@2x.jpg 2x"/>
                   <h3 class="user-name">Елена Новикова</h3>
                   <h4 class="user-employment">студентка</h4>
                   <p class="user-comment">
@@ -274,7 +274,7 @@
                       src="./src/img/chair-cloud-desktop.jpg"
                       alt="Chair caramel"
                       class="card-image"
-                      srcset="img/chair-cloud-desktop@2x.jpg 2x"
+                      srcset="./src/img/chair-cloud-desktop@2x.jpg 2x"
                     />
                   </div>
                   <button class="card-buy">купить</button>
@@ -294,7 +294,7 @@
                       src="./src/img/chair-owl-desktop.png"
                       alt="Chair caramel"
                       class="card-image"
-                      srcset="img/chair-owl-desktop@2x.png 2x"
+                      srcset="./src/img/chair-owl-desktop@2x.png 2x"
                     />
                   </div>
                   <button class="card-buy">купить</button>
@@ -314,7 +314,7 @@
                       src="./src/img/chair-maya-desktop.jpg"
                       alt="Chair caramel"
                       class="card-image"
-                      srcset="img/chair-maya-desktop.jpg@2x 2x"
+                      srcset="./src/img/chair-maya-desktop@2x.jpg 2x"
                     />
                   </div>
                   <button class="card-buy">купить</button>
@@ -334,7 +334,7 @@
                       src="./src/img/chair-messi-desktop.png"
                       alt="Chair caramel"
                       class="card-image"
-                      srcset="img/chair-messi-desktop.png@2x 2x"
+                      srcset="./src/img/chair-messi-desktop@2x.png 2x"
                     />
                   </div>
                   <button class="card-buy">купить</button>
@@ -351,7 +351,7 @@
         <div class="container">
           <div class="footer-top">
             <div class="footer-contacts">
-              <img src="./src/img/logo.svg" alt="Footer logo" class="footer-logo" />
+              <img src="./src/img/logo.svg" alt="Footer logo" class="footer-logo" srcset="./src/img/logo@2x.svg 2x"/>
               <div class="footer-contact">
                 <a href="tel:+74952052814" class="footer-contact-link tel">+7(495) 205-28-14</a>
                 <a href="mail:callium@gmail.com" class="footer-contact-link mail">callium@gmail.com</a>
