Поправит работу картинок в блоке "новые товары"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Callium - продажа дизайнерской мебели" />
-    <title>App</title>
+    <title>Дизайнерская мебель</title>
     <link rel="preload" href="src/fonts/open-sans.woff2" as="font" crossorigin="anonymous" />
     <link rel="preload" href="src/fonts/playfair-display.woff2" as="font" crossorigin="anonymous" />
     <link rel="preload" href="src/fonts/playfair-display-bold.woff2" as="font" crossorigin="anonymous" />
@@ -132,21 +132,21 @@
               <div class="news-blocks">
                 <h2 class="news-title">НОВИНКИ</h2>
                 <a href="#" class="news-item pt-20 pt-10">
-                  <img src="/src/img/chair-twilight-desktop.jpg" alt="chair" class="news-item__image" srcset="/src/img/chair-twilight-desktop@2x.jpg 2x" />
+                  <img src="./src/img/chair-twilight-desktop.jpg" alt="chair" class="news-item__image" srcset="./src/img/chair-twilight-desktop@2x.jpg 2x" />
                   <div class="item-text">
                     <h3 class="news-item__title">Стул «Смеркается»</h3>
                     <span class="news-item__price">$280</span>
                   </div>
                 </a>
                 <a href="#" class="news-item">
-                  <img src="/src/img/chandelier-desktop.jpg" alt="chandelier" class="news-item__image" srcset="/src/img/chandelier-desktop@2x.jpg 2x"/>
+                  <img src="./src/img/chandelier-desktop.jpg" alt="chandelier" class="news-item__image" srcset="./src/img/chandelier-desktop@2x.jpg 2x"/>
                   <div class="item-text">
                     <h3 class="news-item__title">Люстра «Облако»</h3>
                     <span class="news-item__price">$250</span>
                   </div>
                 </a>
                 <a href="#" class="news-item brule">
-                  <img src="/src/img/table-cream-desktop.png" alt="table" class="news-item__image" srcset="/src/img/table-cream-desktop@2x.png 2x"/>
+                  <img src="./src/img/table-cream-desktop.png" alt="table" class="news-item__image" srcset="./src/img/table-cream-desktop@2x.png 2x"/>
                   <div class="item-text">
                     <h3 class="news-item__title">Стол «Крем брюле»</h3>
                     <span class="news-item__price">$320</span>
